# rust_tetris

./: Cargo.toml  draw.drawio
src/: actions.rs  appmodel.rs  cli_input.rs  cli_view.rs  creater.rs  datas.rs  eventloop.rs  field.rs  main.rs  points.rs  view.rs
