[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crossterm]
version = "0.23.0"
features = ["event-stream"]


[dependencies.futures]
version = "0.3"

[dependencies.futures-timer]
version = "3.0"


[dependencies.async-std]
version = "1.10"

[dependencies]
itertools = "0.10.2"
tailcall = "0.1.5"
rand = "0.8.0"
thiserror = "1.0.31"
anyhow = "1.0.57"
fn_block = "0.2.1"
tokio = { version = "1", features = ["full"] }
derive_more = "0.99.17"
mockall = "0.11.0"
